# 1c-batch-py

./: .gitignore  CLAUDE.md  README.md
src/1c-batch/scripts/: __init__.py  cli.py  config.py  pyproject.toml  runner.py
src/1c-batch/scripts/tests/: test_cli.py  test_config.py  test_runner.py
